--- a/Changes
+++ b/Changes
@@ -1,4 +1,15 @@
 ____________________________________________________________________________
+[ 10598] By: autrijus                              on 2004/05/13  01:27:54
+        Log: * This be 0.07.
+             * Need to use RT::LoadConfig instead of requiring
+             the config files directly.  Oops.
+             Reported by: Jesse Vincent
+	   ! lib/Module/Install/RTx.pm
+____________________________________________________________________________
+[ 10587] By: autrijus                              on 2004/05/10  18:23:01
+        Log: * fix manifest
+	   ! MANIFEST
+____________________________________________________________________________
 [ 10586] By: autrijus                              on 2004/05/10  16:39:52
         Log: * This be 0.06.
              * Support "make factory", "make initdb", "make dropdb"
