--- a/Changes
+++ b/Changes
@@ -1,4 +1,25 @@
 ____________________________________________________________________________
+[ 10722] By: autrijus                              on 2004/05/31  16:38:57
+        Log: * This be 0.08.
+             * "make initdb" now moved to M::I::RTx::Factory, so the
+	       person
+             running "perl Makefile.PL" needs not have permission to
+	     read
+             RT_SiteConfig.pm.
+             * M::I::RTx::Factory now survives pod-stripping.
+	   ! lib/Module/Install/RTx.pm
+	   ! lib/Module/Install/RTx/Factory.pm
+____________________________________________________________________________
+[ 10721] By: autrijus                              on 2004/05/31  13:42:40
+        Log: * Jesse reports that RTx('RT-Foo-Bar') breaks.
+	   ! lib/Module/Install/RTx.pm
+____________________________________________________________________________
+[ 10600] By: autrijus                              on 2004/05/15  06:07:57
+        Log: * Improve table detection in Pg.
+             * Better handling failed require() on _Overlay classes
+             in the factory.
+	   ! lib/Module/Install/RTx/Factory.pm
+____________________________________________________________________________
 [ 10598] By: autrijus                              on 2004/05/13  01:27:54
         Log: * This be 0.07.
              * Need to use RT::LoadConfig instead of requiring
