Import of AUTRIJUS/Module-Install-RTx-0.10 from CPAN.
gitpan-cpan-distribution: Module-Install-RTx
gitpan-cpan-version:      0.10
gitpan-cpan-path:         AUTRIJUS/Module-Install-RTx-0.10.tar.gz
gitpan-cpan-author:       AUTRIJUS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+[Changes for 0.10 - 2004-09-09]
+
+* "make initialize-database" added as an alias to "make initdb",
+  for better consistency with core RT installation.
+
+  Reported by: Sika.
+
 [Changes for 0.09 - 2004-09-09]
 
 * Moved under SVK management; remove all keyword expansion lines.
