--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
-[Changes for 0.11 - 2005-02-27]
+[ Changes for 0.20 2007-12-05]
+
+* Support for new RT 3.7 "RT Plugin" mechanism
+* No longer tries to write to the global local perl man and site directories
+  (packlists and manpages), instead installing them within the RT hierarchy
+
+[Changes for 0.11 - 2005-]
 
 * make initdb now prompts for dba password.
 
