--- a/README
+++ b/README
@@ -11,13 +11,13 @@ Module::Install::RTx uses the standard perl module install process:
 
 cpansign -v             # optional; see SIGNATURE for details
 perl Makefile.PL
-make			# or "nmake" on Win32
+make
 make test
 make install
 
 * Copyright
 
-Copyright 2003, 2004, 2005 by Autrijus Tang <autrijus@autrijus.org>
+Copyright 2003, 2004 by Autrijus Tang <autrijus@autrijus.org>
 
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
